Update tampilan dan fitur interaktif

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Musik otomatis diputar saat halaman dimuat -->
   <audio autoplay loop>
-    <source src="path_to_your_song.mp3" type="audio/mp3">
+    <source src="path_to_your_soothing_song.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
 
@@ -24,6 +24,9 @@
     <button id="bukaChestButton">Buka Chest</button>
     <button id="pesanPesanButton">Pesan-Pesan</button>
   </div>
+
+  <!-- Tombol kembali -->
+  <button id="backButton" class="back-button" style="display:none;">Kembali</button>
 
   <!-- Konten dinamis untuk setiap tombol -->
   <div id="hadiah" class="content">
@@ -44,9 +47,9 @@
 
   <div id="chest" class="content">
     <div class="chest-container">
-      <div class="chest">Chest 1 - Potongan Rp1000</div>
-      <div class="chest">Chest 2 - Potongan Rp2000</div>
-      <div class="chest">Chest 3 - Potongan Rp3000</div>
+      <div class="chest">Chest 1 </div>
+      <div class="chest">Chest 2 </div>
+      <div class="chest">Chest 3 </div>
     </div>
   </div>
 
